fix(deps): add pillow >= 12.1.1 (CVE-2026-25990, CVE-2025-48379)
Addresses out-of-bounds write on PSD images and write buffer overflow
on BCn encoding. Added explicit minimum version in both backend and SDK.

--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -52,6 +52,7 @@ dependencies = [
     "aiohttp_session",
     "appdirs",
     "cryptography>=46.0.5",
+    "pillow>=12.1.1",
     "diskcache",
     "nest_asyncio",
     "numpy",
