--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
     "rhesis-penelope",
     "gcsfs>=2025.9.0",
     "cryptography>=46.0.5",
+    "pillow>=12.1.1",
     "opentelemetry-api>=1.32.1",
     "opentelemetry-sdk>=1.32.1",
     "opentelemetry-exporter-otlp-proto-http>=1.32.1",
