fix(deps): add langgraph-checkpoint >= 3.0.0 (CVE-2025-64439)
Addresses RCE in "json" mode of JsonPlusSerializer. Added explicit
minimum version to SDK's langgraph, all-integrations, and all optional
dependency sections.

--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -92,6 +92,7 @@ langchain = [
 
 langgraph = [
     "langgraph>=0.0.26",
+    "langgraph-checkpoint>=3.0.0",
     "langchain>=0.1.0",
     "langchain-core>=1.2.5",
 ]
@@ -104,6 +105,7 @@ all-integrations = [
     "langchain>=0.1.0",
     "langchain-core>=1.2.5",
     "langgraph>=0.0.26",
+    "langgraph-checkpoint>=3.0.0",
     "pyautogen>=0.2.0",
 ]
 
@@ -116,6 +118,7 @@ all = [
     "langchain>=0.1.0",
     "langchain-core>=1.2.5",
     "langgraph>=0.0.26",
+    "langgraph-checkpoint>=3.0.0",
     "pyautogen>=0.2.0",
 ]
 [dependency-groups]
