fix(deps): migrate python-jose to PyJWT (CVE-2024-23342)
Replaces python-jose[cryptography] with PyJWT>=2.10.0, eliminating the
transitive ecdsa dependency which has an unpatched Minerva timing attack
vulnerability. Updates all JWT encode/decode calls to use PyJWT's API:
- jwt.decode options: require_exp/require_iat → require: [exp, iat]
- JWTError → jwt.PyJWTError (aliased as JWTError for minimal diff)
- Expired token detection via jwt.ExpiredSignatureError

--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "openpyxl",
     "nanoid",
     "huggingface_hub",
-    "python-jose[cryptography]",
+    "PyJWT>=2.10.0",
     "python-multipart>=0.0.22",
     "authlib",
     "httpx",
