fix(deps): add marshmallow >= 3.26.2 (CVE-2025-68480)
Addresses DoS in Schema.load(many). Added explicit minimum version
in SDK to force transitive dependency above patched version.

--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
     "appdirs",
     "cryptography>=46.0.5",
     "pillow>=12.1.1",
+    "marshmallow>=3.26.2",
     "diskcache",
     "nest_asyncio",
     "numpy",
