chore(deps): document orjson CVE-2025-67221 (no patch available)
orjson has no recursion limit for deeply nested JSON documents.
No patch is available. Documented as known unpatched vulnerability.

--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -4,6 +4,8 @@ version = "0.6.4"
 description = "Rhesis backend package"
 readme = "README.md"
 requires-python = ">=3.10"
+# Known unpatched vulnerabilities in transitive dependencies:
+# - orjson (CVE-2025-67221): no recursion limit for deeply nested JSON. No patch available.
 dependencies = [
     "fastapi",
     "uvicorn",
