--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -54,6 +54,8 @@ dependencies = [
     "cryptography>=46.0.5",
     "pillow>=12.1.1",
     "marshmallow>=3.26.2",
+    # NOTE: diskcache has unsafe pickle deserialization (CVE-2025-69872).
+    # No patch available. Ensure only trusted data is cached.
     "diskcache",
     "nest_asyncio",
     "numpy",
