--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -144,6 +144,7 @@ dev = [
     "psycopg2-binary==2.9.9", # to match the version in the backend
     "pytest-cov>=7.0.0",
     "garak>=0.9.0.4",
+    "virtualenv>=20.36.1",
 ]
 
 [build-system]
