--- a/apps/worker/pyproject.toml
+++ b/apps/worker/pyproject.toml
@@ -38,7 +38,7 @@ dependencies = [
     "pydantic>=2.11.7",
     "pyfiglet==1.0.2",
     "python-dotenv>=1.1.1",
-    "python-jose[cryptography]>=3.5.0",
+    "PyJWT[crypto]>=2.10.0",
     "python-multipart>=0.0.22",
     "pyyaml>=6.0.2",
     "redis>=4.5.2,!=4.5.5,<6.0.0",
