--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -74,7 +74,11 @@
   "overrides": {
     "glob": "^10.0.0",
     "rimraf": "^5.0.0",
-    "inflight": "npm:@humanfs/core@^1.0.0"
+    "inflight": "npm:@humanfs/core@^1.0.0",
+    "@babel/traverse": ">=7.23.2",
+    "fast-xml-parser": ">=5.3.6",
+    "loader-utils": ">=2.0.3",
+    "webpack": ">=5.76.0"
   },
   "devDependencies": {
     "@axe-core/react": "^4.7.0",
