fix(deps): patch high severity security vulnerabilities in frontend transitive deps
Add overrides for minimatch (CVE-2026-26996), @isaacs/brace-expansion
(CVE-2026-25547), braces (CVE-2024-4068), json5 (CVE-2022-46175),
path-to-regexp (CVE-2024-45296), and sanitize-html (CVE-2022-25887).

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -78,7 +78,13 @@
     "@babel/traverse": ">=7.23.2",
     "fast-xml-parser": ">=5.3.6",
     "loader-utils": ">=2.0.3",
-    "webpack": ">=5.76.0"
+    "webpack": ">=5.76.0",
+    "minimatch": ">=10.2.1",
+    "@isaacs/brace-expansion": ">=5.0.1",
+    "braces": ">=3.0.3",
+    "json5": ">=2.2.2",
+    "path-to-regexp": ">=1.9.0",
+    "sanitize-html": ">=2.12.1"
   },
   "devDependencies": {
     "@axe-core/react": "^4.7.0",
