--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -84,7 +84,14 @@
     "braces": ">=3.0.3",
     "json5": ">=2.2.2",
     "path-to-regexp": ">=1.9.0",
-    "sanitize-html": ">=2.12.1"
+    "sanitize-html": ">=2.12.1",
+    "dompurify": ">=3.2.4",
+    "@babel/runtime": ">=7.26.10",
+    "lodash": ">=4.17.23",
+    "lodash-es": ">=4.17.23",
+    "nanoid": ">=3.3.8",
+    "postcss": ">=8.4.31",
+    "serialize-javascript": ">=6.0.2"
   },
   "devDependencies": {
     "@axe-core/react": "^4.7.0",
