Fix security dependency vulnerabilities in backend (#1383)
* fix(deps): update cryptography to >= 46.0.5 (CVE-2026-26007)

Addresses subgroup attack due to missing validation for SECT Curves.
Updated in both backend (from >=44.0.3) and SDK (from unpinned).

* fix(deps): add pillow >= 12.1.1 (CVE-2026-25990, CVE-2025-48379)

Addresses out-of-bounds write on PSD images and write buffer overflow
on BCn encoding. Added explicit minimum version in both backend and SDK.

* fix(deps): update mcp to >= 1.23.0 (CVE-2025-66416)

Addresses DNS rebinding protection not enabled by default.
Updated SDK from >=1.2.0 to >=1.23.0. Backend already pulls >=1.23.0
transitively via mcp-atlassian.

* fix(deps): add langgraph-checkpoint >= 3.0.0 (CVE-2025-64439)

Addresses RCE in "json" mode of JsonPlusSerializer. Added explicit
minimum version to SDK's langgraph, all-integrations, and all optional
dependency sections.

* fix(deps): migrate python-jose to PyJWT (CVE-2024-23342)

Replaces python-jose[cryptography] with PyJWT>=2.10.0, eliminating the
transitive ecdsa dependency which has an unpatched Minerva timing attack
vulnerability. Updates all JWT encode/decode calls to use PyJWT's API:
- jwt.decode options: require_exp/require_iat → require: [exp, iat]
- JWTError → jwt.PyJWTError (aliased as JWTError for minimal diff)
- Expired token detection via jwt.ExpiredSignatureError

* fix(deps): add marshmallow >= 3.26.2 (CVE-2025-68480)

Addresses DoS in Schema.load(many). Added explicit minimum version
in SDK to force transitive dependency above patched version.

* chore(deps): document orjson CVE-2025-67221 (no patch available)

orjson has no recursion limit for deeply nested JSON documents.
No patch is available. Documented as known unpatched vulnerability.

* chore(deps): document diskcache CVE-2025-69872 (no patch available)

diskcache uses unsafe pickle deserialization. No patch is available.
Documented as known unpatched vulnerability in SDK pyproject.toml.

* fix(deps): add virtualenv

--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "deepteam>=0.2.5",
     "langchain-google-genai>=2.1.12",
     "ragas>=0.3.7",
-    "mcp>=1.2.0",
+    "mcp>=1.23.0",
     "websockets>=12.0",
     "ipython>=8.37.0",
     "ipykernel>=7.1.0",
@@ -51,7 +51,12 @@ dependencies = [
     "aiohttp_security",
     "aiohttp_session",
     "appdirs",
-    "cryptography",
+    "cryptography>=46.0.5",
+    "pillow>=12.1.1",
+    "marshmallow>=3.26.2",
+    "mammoth>=1.11.0",
+    # NOTE: diskcache has unsafe pickle deserialization (CVE-2025-69872).
+    # No patch available. Ensure only trusted data is cached.
     "diskcache",
     "nest_asyncio",
     "numpy",
@@ -86,13 +91,14 @@ garak = [
 # Framework integrations for auto-instrumentation
 langchain = [
     "langchain>=0.1.0",
-    "langchain-core>=1.2.5",
+    "langchain-core>=1.2.11",
 ]
 
 langgraph = [
     "langgraph>=0.0.26",
+    "langgraph-checkpoint>=3.0.0",
     "langchain>=0.1.0",
-    "langchain-core>=1.2.5",
+    "langchain-core>=1.2.11",
 ]
 
 autogen = [
@@ -101,8 +107,9 @@ autogen = [
 
 all-integrations = [
     "langchain>=0.1.0",
-    "langchain-core>=1.2.5",
+    "langchain-core>=1.2.11",
     "langgraph>=0.0.26",
+    "langgraph-checkpoint>=3.0.0",
     "pyautogen>=0.2.0",
 ]
 
@@ -113,8 +120,9 @@ all = [
     "bitsandbytes>=0.45.0",
     "lm-format-enforcer>=0.10.0",
     "langchain>=0.1.0",
-    "langchain-core>=1.2.5",
+    "langchain-core>=1.2.11",
     "langgraph>=0.0.26",
+    "langgraph-checkpoint>=3.0.0",
     "pyautogen>=0.2.0",
 ]
 [dependency-groups]
@@ -137,6 +145,7 @@ dev = [
     "psycopg2-binary==2.9.9", # to match the version in the backend
     "pytest-cov>=7.0.0",
     "garak>=0.9.0.4",
+    "virtualenv>=20.36.1",
 ]
 
 [build-system]
