--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -4,6 +4,8 @@ version = "0.6.4"
 description = "Rhesis backend package"
 readme = "README.md"
 requires-python = ">=3.10"
+# Known unpatched vulnerabilities in transitive dependencies:
+# - orjson (CVE-2025-67221): no recursion limit for deeply nested JSON. No patch available.
 dependencies = [
     "fastapi",
     "uvicorn",
@@ -19,7 +21,7 @@ dependencies = [
     "openpyxl",
     "nanoid",
     "huggingface_hub",
-    "python-jose[cryptography]",
+    "PyJWT>=2.10.0",
     "python-multipart>=0.0.22",
     "authlib",
     "httpx",
@@ -48,7 +50,8 @@ dependencies = [
     "rhesis-sdk",
     "rhesis-penelope",
     "gcsfs>=2025.9.0",
-    "cryptography>=44.0.3",
+    "cryptography>=46.0.5",
+    "pillow>=12.1.1",
     "opentelemetry-api>=1.32.1",
     "opentelemetry-sdk>=1.32.1",
     "opentelemetry-exporter-otlp-proto-http>=1.32.1",
