--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -64,7 +64,7 @@
     "next": "^16.1.6",
     "next-auth": "5.0.0-beta.30",
     "nodemailer": "^7.0.11",
-    "prismjs": "^1.29.0",
+    "prismjs": "^1.30.0",
     "raw-loader": "^4.0.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
@@ -91,7 +91,8 @@
     "lodash-es": ">=4.17.23",
     "nanoid": ">=3.3.8",
     "postcss": ">=8.4.31",
-    "serialize-javascript": ">=6.0.2"
+    "serialize-javascript": ">=6.0.2",
+    "qs": ">=6.14.2"
   },
   "devDependencies": {
     "@axe-core/react": "^4.7.0",
