--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -64,7 +64,7 @@
     "next": "^16.1.6",
     "next-auth": "5.0.0-beta.30",
     "nodemailer": "^7.0.11",
-    "prismjs": "^1.29.0",
+    "prismjs": "^1.30.0",
     "raw-loader": "^4.0.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
@@ -74,7 +74,25 @@
   "overrides": {
     "glob": "^10.0.0",
     "rimraf": "^5.0.0",
-    "inflight": "npm:@humanfs/core@^1.0.0"
+    "inflight": "npm:@humanfs/core@^1.0.0",
+    "@babel/traverse": ">=7.23.2",
+    "fast-xml-parser": ">=5.3.6",
+    "loader-utils": ">=2.0.3",
+    "webpack": ">=5.76.0",
+    "minimatch": ">=10.2.1",
+    "@isaacs/brace-expansion": ">=5.0.1",
+    "braces": ">=3.0.3",
+    "json5": ">=2.2.2",
+    "path-to-regexp": ">=1.9.0",
+    "sanitize-html": ">=2.12.1",
+    "dompurify": ">=3.2.4",
+    "@babel/runtime": ">=7.26.10",
+    "lodash": ">=4.17.23",
+    "lodash-es": ">=4.17.23",
+    "nanoid": ">=3.3.8",
+    "postcss": ">=8.4.31",
+    "serialize-javascript": ">=6.0.2",
+    "qs": ">=6.14.2"
   },
   "devDependencies": {
     "@axe-core/react": "^4.7.0",
