fix(deps): resolve 46 dependabot security alerts across all packages
Bump minimum versions for vulnerable transitive dependencies:
- langchain-core >=1.2.11 (SSRF via image_url token counting)
- cryptography >=46.0.5 (subgroup attack on SECT curves)
- pillow >=12.1.1 (OOB write on PSD images)
- fastmcp >=2.14.0 (CVE-2025-66416)
- redis >=5.0.0 in backend (unblocks fastmcp upgrade)
- Remove legacy babel/babel-core from adaptive_testing client
- Upgrade webpack, lodash, json5, sanitize-html in adaptive_testing
- Upgrade eslint to v10 in docs to fix minimatch ReDoS chain
- Regenerate all uv.lock and package-lock.json files

Remaining unfixable: diskcache (7 alerts, no patch), orjson (3 alerts, no patch)

--- a/agents/research-assistant/pyproject.toml
+++ b/agents/research-assistant/pyproject.toml
@@ -18,13 +18,15 @@ keywords = [
 dependencies = [
     "rhesis-sdk",
     "langgraph>=0.2.0",
-    "langchain-core>=1.2.5",
+    "langchain-core>=1.2.11",
     "langchain-google-genai>=2.0.0",
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.34.0",
     "python-dotenv>=1.0.0",
     "pydantic>=2.0.0",
     "requests>=2.31.0",
+    "cryptography>=46.0.5",
+    "pillow>=12.1.1",
 ]
 
 [project.license]
