--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -33,7 +33,7 @@ dependencies = [
     "psutil==5.9.5",
     "celery[redis]==5.5.2",
     "kombu==5.5.3",
-    "redis==4.6.0",
+    "redis>=5.0.0,<6.0.0",
     "portalocker==3.1.1",
     "yaspin==3.1.0",
     "pyfiglet==1.0.2",
@@ -96,6 +96,10 @@ url = "https://download.pytorch.org/whl/cu128"
 explicit = true
 
 [tool.uv]
+# Force minimum versions for transitive dependencies with security advisories
+constraint-dependencies = [
+    "fastmcp>=2.14.0",
+]
 # CPU and GPU extras are mutually exclusive
 conflicts = [
     [{ extra = "cpu" }, { extra = "gpu" }],
